# iarmmgrs

./: .gitignore  CHANGELOG.md  HTML-lib32-iarmmgrs.tgz  LICENSE  Makefile  Makefile.am  aclocal.m4  build.sh  build_dependencies.sh  configure  configure.ac  cov_build.sh  rdk_build.sh  rdk_env.xml
.github/workflows/: L1-tests.yml  fossid_integration_stateless_diffscan_target_repo.yml  native_full_build.yml
HTML-lib32-iarmmgrs/: index.html  index.xml  index1.html  index1.xml  index51.html  index51.xml  summary.html  summary.xml
HTML-lib32-iarmmgrs/1/: 10_deviceUpdateMgrMain.cpp.html  12_deviceUpdateMgrMain.cpp.html  12_dsMgrPwrEventListener.c.html  13_deviceUpdateMgrMain.cpp.html  13_sysMgr.c.html  14_sleepTimer.c.html  14_unique_lock.h.html  15_deviceUpdateMgrMain.cpp.html  15_pwrMgr.c.html  15_sleepTimer.c.html  17_deviceUpdateMgrMain.cpp.html  17_sleepTimer.c.html  18_sleepTimer.c.html  19_sleepTimer.c.html  1_dsMgrPwrEventListener.c.html  20_dsMgr.c.html  22_dsMgr.c.html  22_pwrMgr.c.html  23_deepSleep.c.html  23_dsMgrPwrEventListener.c.html  23_gmessages.h.html  24.0_dsMgrProductTraitsHandler.h.html  24_dsMgrProductTraitsHandler.cpp.html  25_dsMgr.c.html  28_test_mfr_client.c.html  29_test_mfr_client.c.html  2_deviceUpdateMgrMain.cpp.html  2_test_pwrMgr.c.html  30_test_mfr_client.c.html  31_sleepTimer.c.html  31_test_mfr_client.c.html  32_sleepTimer.c.html  32_test_mfr_client.c.html  33_sleepTimer.c.html  33_test_mfr_client.c.html  34_sleepTimer.c.html  34_test_mfr_client.c.html  35_test_mfr_client.c.html  39.0_dsMgrProductTraitsHandler.h.html  39_dsMgrProductTraitsHandler.cpp.html  (+36 more)
autom4te.cache/: output.2  output.3  requests  traces.0  traces.1  traces.2
cfg/: config.h.in
conf/: deviceupdatemgr.service  diskmgr.service  ds-reboot.sh  dsmgr.service  irmgr.service  mfrmgr.service  pwrmgr.service  sysmgr.service
deepsleepmgr/: Makefile  Makefile.am  deepSleepInternal.h  deepSleepMgr.c  deepSleepMgrMain.c  deepsleeplogger.h
deepsleepmgr/include/: resetModes.h
deviceUpdateMgr/: Makefile  Makefile.am  deviceUpdateMgrMain.cpp  jsonParser.cpp  jsonParser.h  utils.cpp  utils.h
deviceUpdateMgr/include/: deviceUpdateMgr.h  deviceUpdateMgrInternal.h
disk/: Makefile  Makefile.am  diskMgr.c  diskMgrInternal.h  diskMgrMain.c
disk/include/: diskMgr.h
dsmgr/: Makefile  Makefile.am  dsMgr.c  dsMgrHelper.cpp  dsMgrInternal.h  dsMgrMain.c  dsMgrProductTraitsHandler.cpp  dsMgrProductTraitsHandler.h  dsMgrPwrEventListener.c  dsMgrPwrEventListener.h
hal/include/: comcastIrKeyCodes.h  plat_ir.h  therm_mon.h
ipk/: control  postinst  prerm
ir/: IrInputRemoteKeyCodes.h  Makefile  Makefile.am  irMgr.c  irMgrInternal.h  irMgrMain.c  uinput.c
ir/include/: irMgr.h
maintenance/include/: maintenanceMGR.h
mfr/: Makefile  Makefile.am  mfrMgr.c  mfrMgrInternal.h  mfrMgrMain.c
mfr/common/: Makefile  mfrMgr.c  mfrMgrInternal.h  mfrMgrMain.c
mfr/common/cryptolib/: Makefile  mfrCrypto.c
mfr/common/include/: mfrCrypto.h  mfrMgr.h  mfrTypes.h
mfr/common/rpc/cli/: Makefile  mfrCli.c
mfr/common/rpc/srv/: Makefile  mfrSrv.c
mfr/common/test_mfr_client/: Makefile  test_mfr_client.c
mfr/include/: mfrMgr.h  mfrTypes.h  mfr_temperature.h
mfr/test_mfr/: Makefile  mfr_deletePDRI.c  mfr_getFsrFlag.c  mfr_scrubAllBanks.c  mfr_setFsrFlag.c  mfr_wifiEraseAllData.c  mfr_wifiGetCredentials.c  mfr_wifiSetCredentials.c  test_mfr_client.c  test_mfr_get_blocklist.c  test_mfr_set_blocklist.c  test_writeImage.c
power/: Makefile  Makefile.am  coldFactoryReset.c  customerReset.c  deepSleep.c  factoryReset.c  personalityReset.c  pwrMgr.c  pwrMgrHelper.cpp  pwrMgrInternal.h  pwrMgrMain.c  pwrlogger.h  sleepTimer.c  therm_mgr.c  therm_mon.c  userFactoryReset.c  wareHouseClear.c  wareHouseReset.c
power/include/: resetModes.h
pwrstate/: Makefile  Makefile.am  pwrstate_notifier.c
rdmmgr/include/: rdmMgr.h
receiver/include/: receiverMgr.h
stubs/: Makefile  ds_stubs.cpp  dshal_stubs.c  dshalsrv_stubs.c  iarm_stubs.cpp  powerctrl_stubs.cpp  safec_lib.h  secure_wrapper.h  telemetry_busmessage_sender.h  telemetry_stubs.c  wdmp-c.h
sysmgr/: Makefile  Makefile.am  sysMgr.c  sysMgrInternal.h  sysMgrMain.c
sysmgr/include/: sysMgr.h
test/: Makefile  Makefile.am  test_mode_change_client.c  test_pwrMgr.c  test_sys_client.c  test_uinput.c
tests/: Makefile.am
tests/L1Tests/: Makefile.am  test_main.cpp
tests/L1Tests/deviceUpdateMgr/: test_deviceUpdateMgr.cpp
tests/L1Tests/disk/: test_diskMgr.cpp
tests/L1Tests/dsmgr/: test_dsMgr.cpp
tests/L1Tests/mfr/: test_mfrMgr.cpp
tests/L1Tests/mocks/: dsHalMock.h
tests/L1Tests/stubs/: dsAudioConfig.h  dsMgr.h  dsRpc.h  dsVideoPortConfig.h  iarmmgrs_test_stubs.h  jsonParser_stub.cpp  libIARM.h  libIBusDaemon.h  mfrMgr.h  plat_power.h  rfcapi.h
tests/L1Tests/sysmgr/: test_sysMgr.cpp
tests/L1Tests/utils/: test_rdkProfile.cpp
tests/mocks/iarmmgrs/: WrapsExt.cpp  WrapsExt.h
unit_tests/L1Tests/: Makefile.am  test_main.cpp
unit_tests/L1Tests/deviceUpdateMgr/: test_deviceUpdateMgr.cpp
unit_tests/L1Tests/disk/: test_diskMgr.cpp
unit_tests/L1Tests/mocks/: dsHalMock.h
unit_tests/L1Tests/stubs/: dsRpc.h  iarmmgrs_test_stubs.h
unit_tests/L1Tests/sysmgr/: iarm_sysmgr_stubs.cpp
unit_tests/L1Tests/utils/: test_rdkProfile.cpp
utils/: Makefile  iarmutilslogger.h  rdkProfile.c  rdkProfile.h
